--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -19,7 +19,10 @@
           </li>
           <li class="nav-item active">
             <a routerLink="Ingresar" class="nav-link">Ingresar &#8594; </a>
-          </li>
+          </li> 
+          <li class="nav-item active">
+          <a routerLink= "Mi Lista" class="nav-link">Mi Lista </a>
+        </li> 
         </ul>
       </div>
     </nav>
