--- a/src/app/components/routes/inicio/inicio.component.html
+++ b/src/app/components/routes/inicio/inicio.component.html
@@ -17,24 +17,27 @@
   <div *ngIf="filter == 'Todos'">
   <div class="flex">
     <div *ngFor="let nombre of Todos">
-     <app-card [movies_series]= nombre></app-card> 
-     </div>
+      <!-- <app-card [isadd] = true [movies_series]= nombre></app-card> -->
+      <!-- <app-card [movies_series]= nombre></app-card>  -->
+    </div>
   </div>
 </div>
 
 <div *ngIf="filter == 'Pelicula'">
   <div class="flex">
     <div *ngFor="let nombre of Movies">
-     <app-card [movies_series]= nombre></app-card> 
-     </div>
+      <!-- <app-card [isadd] = true [movies_series]= nombre></app-card> -->
+      <!-- <app-card [movies_series]= nombre></app-card>  -->
+    </div>
   </div>
 </div>
 
 <div *ngIf="filter == 'Serie'">
   <div class="flex">
     <div *ngFor="let nombre of Series">
-     <app-card [movies_series]= nombre></app-card> 
-     </div>
+      <!-- <app-card [isadd] = true [movies_series]= nombre></app-card> -->
+      <!-- <app-card [movies_series]= nombre></app-card>   -->
+    </div>
   </div>
 </div>
 
